kind-deployment/quizzler/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quizzler
  labels:
    app.kubernetes.io/part-of: quizzler-system
    capability: quizzler
